--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: /giphy title
-description: /giphy description @Jack Fox
+description: @Jack Fox description2 @Jack Fox
