--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: /giphy title
-description: `\@Jack Fox description2 @Jack Fox
+description: "`\@Jack Fox description2 @Jack Fox @Jack Fox
+*bold*­"
